--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -2,7 +2,7 @@
 \subsection{Kommentare}
 Kommentare werden in \LaTeX{} mit einem Prozentzeichen eingeleitet. Alles, was nach dem Prozentzeichen in der selben Zeile steht, wird von \LaTeX{} ignoriert. Mehrzeilige Kommentare sind mit den Befehlen \textbf{\texttt{\textbackslash begin\{comment\}}} und \textbf{\texttt{\textbackslash end\{comment\}}} möglich. Dafür wird das Paket \textbf{comment} benötigt.
 
-\begin{lstlisting}
+\begin{lstlisting}[language={[LaTeX]TeX}]
     % Dies ist ein einzeiliger Kommentar
     Text ohne Kommentar.
     
