--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 \usepackage[inkscapeformat=png]{svg} % Ermöglicht SVG-Grafiken, konvertiert zu PNG
 \usepackage{subcaption}         % Ermöglicht mehrere Teilabbildungen mit Untertiteln
 \usepackage{pdfpages}           % Einfügen von PDF-Dokumenten -> \includepdf[pages={...}]{dokument.pdf}
+\usepackage{fancybox}           % Schöne Boxen für Bilder -> \shadowbox{...}
 
 % Listen
 \usepackage{enumitem}           % Ermöglicht Anpassungen von Listen -> \begin{itemize}[label=...]
