--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,7 @@
 \usepackage{xcolor}             % Ermöglicht das Färben von Tabellenzellen -> \cellcolor{color} und viele weitere Farboptionen
 \usepackage{booktabs}           % Schönere Tabellenlinien -> \toprule, \midrule, \bottomrule
 \usepackage{longtable}          % Tabellen über mehrere Seiten -> \begin{longtable} ... \end{longtable}
+\usepackage{array}              % Ermöglicht das Anpassen von Tabellenspalten -> \begin{tabular}{>{\centering\arraybackslash}p{2cm}}
 
 % Quellcode
 \usepackage{listings, pmboxdraw} % Quellcode einbinden und optisch ansprechend rahmen
