--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -125,7 +125,7 @@ Beispiel: $a^2 + b^2 = c^2$ (Syntax: \texttt{\$a\^{}2 + b\^{}2 = c\^{}2\$})
 
 \subsubsection{Abgesetzte Gleichungen}
 Für abgesetzte Gleichungen gibt es die Umgebung \textbf{\texttt{equation}}. Diese setzt die Gleichung zentriert und nummeriert sie.
-Wird in der \textbf{\texttt{equation}}-Umgebung ein \textbf{\texttt{\textbackslash label\{...\}}} Befehl verwendet, kann die Gleichung im Text referenziert werden (\autoref{eq:planck}) (siehe auch: \ref{sec:querverweise}).
+Wird in der \textbf{\texttt{equation}}-Umgebung ein \textbf{\texttt{\textbackslash label\{...\}}} Befehl verwendet, kann die Gleichung im Text referenziert werden (\autoref{eq:planck}) (siehe auch: \nameref{sec:querverweise}).
 Alternativ kann ebenfalls die Kurzform \textbf{\texttt{\textbackslash [ ... \textbackslash ]}} verwendet werden, bei welcher jedoch keine Nummerierung erfolgt.
 
 \begin{minipage}{0.5\textwidth}
@@ -399,7 +399,7 @@ int main() {
 \end{lstlisting}
 
 \subsubsection{Beschriftung und Referenzierung des Quellcodes}
-Gelegentlich ist es gewünscht ein eine Code-Box zu beschriften und sie referenzieren zu können. Dies kann mit dem Befehl \textbf{\texttt{\textbackslash begin\{lstlisting\}[language=C, caption=Beispielcode, label=scr:beispiel]}} erreicht werden (\autoref{scr:beispiel}) (siehe auch: \ref{sec:querverweise}).
+Gelegentlich ist es gewünscht ein eine Code-Box zu beschriften und sie referenzieren zu können. Dies kann mit dem Befehl \textbf{\texttt{\textbackslash begin\{lstlisting\}[language=C, caption=Beispielcode, label=scr:beispiel]}} erreicht werden (\autoref{scr:beispiel}) (siehe auch: \nameref{sec:querverweise}).
 
 \begin{lstlisting}[language=C, caption=Beispielcode, label=scr:beispiel]
 int bsp() {
@@ -475,14 +475,14 @@ Die Platzierung von Bildern kann mit den folgenden Optionen in \textbf{\texttt{\
         H               & Genau hier (here)              \\
         \bottomrule
     \end{tabular}
-    \caption{Platzierungsoptionen für Bilder}
+    \caption{Platzierungsoptionen für Bilder, Tabellen und ähnliche Elemente}
     \label{tab:figure_options}
 \end{table}
 
 Für die H-Positionierungsoption wird das Paket \textbf{\texttt{float}} benötigt.
 
 \subsubsection{Beschriftung und Referenzierung von Bildern}
-Bilder können mit dem Befehl \textbf{\texttt{\textbackslash caption\{Bildunterschrift\}}} beschriftet werden. Mit dem Befehl \textbf{\texttt{\textbackslash label\{fig:bild\}}} wird ein Label gesetzt, auf welches im Text referenziert werden kann (\autoref{fig:sägezahnspannung})(siehe auch: \ref{sec:querverweise}).
+Bilder können mit dem Befehl \textbf{\texttt{\textbackslash caption\{Bildunterschrift\}}} beschriftet werden. Mit dem Befehl \textbf{\texttt{\textbackslash label\{fig:bild\}}} wird ein Label gesetzt, auf welches im Text referenziert werden kann (\autoref{fig:sägezahnspannung})(siehe auch: \nameref{sec:querverweise}).
 
 \subsubsection{Gerahmte Bilder}
 Bilder können mit dem Befehl \textbf{\texttt{\textbackslash fbox\{\textbackslash includegraphics[...]\{Pfad/zum/Bild.png\}\}}} oder mit dem \textbf{\texttt{\textbackslash shadowbox\{\textbackslash includegraphics[...]\{Pfad/zum/Bild.png\}\}}} gerahmt werden. Für die Schattierung wird das Paket \textbf{\texttt{fancybox}} benötigt.
@@ -556,3 +556,94 @@ In der \textbf{\texttt{subfigure}}-Umgebung können durch geschicktes Aneinander
 
 
 \subsection{Tabellen}
+In \LaTeX{} können Tabellen auf einige Weisen erstellt werden. Die wichtigsten Möglichkeiten und Optionen werden im Folgenden vorgestellt.
+
+\subsubsection{Einfache Tabelle}
+Eine einfache Tabelle kann mit der \textbf{\texttt{tabular}}-Umgebung erstellt werden. Die Spalten werden durch \textbf{\texttt{\&}} und die Zeilen durch \textbf{\texttt{\textbackslash\textbackslash}} getrennt. Häufig wird die \textbf{\texttt{tabular}}-Umgebung in einer \textbf{\texttt{table}}-Umgebung verwendet, um die Tabelle zu positionieren, zu beschriften und zu referenzieren (siehe auch: \nameref{sec:querverweise}).
+
+Die \textbf{\texttt{table}}-Umgebung kann mit einer Option \textbf{\texttt{[...]}} versehen werden, um die Positionierung zu steuern (siehe auch: \autoref{tab:figure_options}).
+
+Darüber hinaus können die Spalten mit \textbf{\texttt{l}}, \textbf{\texttt{r}} und \textbf{\texttt{c}} für linksbündig, rechtsbündig und zentriert ausgerichtet werden. Mit \textbf{\texttt{\textbackslash hline}} können vertikale Linien eingefügt werden. In dem folgenden Beispiel werden zudem die Möglichkeiten doppelter horizontaler Linien (\textbf{\texttt{\textbackslash hline \textbackslash hline}}) und doppelter vertikaler Linien (\textbf{\texttt{||}}) visualisiert.
+
+\begin{minipage}{0.5\textwidth}
+    \begin{lstlisting}[language={[LaTeX]TeX}]
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l||r|c|}
+        \hline
+        name & age & size \\
+        \hline \hline
+        Max  & 25    & 1,80m \\
+        \hline
+        Anna & 22    & 1,65m \\
+        Gustav & 30    & 1,75m \\
+        \hline
+    \end{tabular}
+    \caption{Einfache Tabelle}
+    \label{tab:einfache_tabelle}
+\end{table}
+\end{lstlisting}
+\end{minipage}
+\hfill
+\begin{minipage}{0.5\textwidth}
+    \begin{table}[H]
+        \centering
+        \begin{tabular}{|l||r|c|}
+            \hline
+            name   & age & size  \\
+            \hline \hline
+            Max    & 25  & 1,80m \\
+            \hline
+            Anna   & 22  & 1,65m \\
+            Gustav & 30  & 1,75m \\
+            \hline
+        \end{tabular}
+        \caption{Einfache Tabelle}
+        \label{tab:einfache_tabelle}
+    \end{table}
+\end{minipage}
+
+\subsubsection{Formatierte Tabellen}
+Tabellen können mit dem Paktet \textbf{\texttt{array}} formatiert werden.
+Formatierungsoptionen können mit dem Befehl \textbf{\texttt{\textbackslash begin\{tabular\}\{...\}}} angegeben werden.
+
+Möglichkeiten sind unter anderem:
+
+
+\textbf{Hier gehts gleich weiter.....}
+
+\begin{table}[h]
+    \centering
+    \renewcommand{\arraystretch}{1.3} % Erhöhte Zeilenhöhe für bessere Lesbarkeit
+    \setlength{\tabcolsep}{8pt} % Abstände zwischen Spalten setzen
+    \rowcolors{2}{gray!20}{white} % Alternierende Zeilenfarben
+
+    \begin{tabular}{p{5cm} p{7cm}}
+        \toprule
+        \rowcolor{gray!40} % Kopfzeilenhintergrund
+        \textbf{Wirkung}                 & \textbf{Befehl}                                                                                         \\
+        \midrule
+        Fettgedruckte Spalte             & \{\textbackslash bfseries\}c                                                                            \\
+        Kursiv formatierte Spalte        & \{\textbackslash itshape\}c                                                                             \\
+        Farbige Spalte                   & \{\textbackslash columncolor\{gray!20\}\}c                                                              \\
+        Linksbündige Spalte mit Umbruch  & \{\textbackslash raggedright\textbackslash arraybackslash\}p\{4cm\}                                     \\
+        Zentrierte Spalte mit Umbruch    & \{\textbackslash centering\textbackslash arraybackslash\}p\{4cm\}                                       \\
+        Rechtsbündige Spalte mit Umbruch & \{\textbackslash raggedleft\textbackslash arraybackslash\}p\{4cm\}                                      \\
+        Mathematische Spalte             & \{$\}c<\{$\}                                                                                            \\
+        Mehrzeilige Spalte (Mitte)       & m\{3cm\}                                                                                                \\
+        Mehrzeilige Spalte (Unten)       & b\{3cm\}                                                                                                \\
+        Mehrzeilige Spalte (Oben)        & p\{3cm\}                                                                                                \\
+        Eigene Spaltentypen definieren   & \textbackslash newcolumntype\{X\}\{>\{\textbackslash centering\textbackslash arraybackslash\}p\{3cm\}\} \\
+        Alternierende Zeilenfarben       & \textbackslash rowcolors\{2\}\{gray!20\}\{white\}                                                       \\
+        Größere Zeilenhöhe setzen        & \textbackslash renewcommand\{\textbackslash arraystretch\}\{1.3\}                                       \\
+        Spaltenabstand erhöhen           & \textbackslash setlength\{\textbackslash tabcolsep\}\{8pt\}                                             \\
+        Mehrere Spalten verbinden        & \textbackslash multicolumn\{2\}\{c\}\{Text\}                                                            \\
+        Mehrere Zeilen verbinden         & \textbackslash multirow\{2\}\{*\}\{Text\}                                                               \\
+        \bottomrule
+    \end{tabular}
+
+    \caption{Übersicht aller `array`-Formatierungsoptionen}
+    \label{tab:array_formatierungen}
+\end{table}
+
+
